<resources>

    <string name="app_name" translatable="false">Dress game</string>


    <string name="go_to_setting_message">The app needs this permission</string>
    <string name="settings">Setting</string>
    <string name="this_action_can_contain_ads">This action can contain ads</string>
    <string name="not_select_lang">Please select a language</string>
    <string name="next">Next</string>
    <string name="language">LANGUAGE</string>

    <string name="title_1">Create your own avatar however you like</string>
    <string name="title_2">Diverse Unique Categories</string>
    <string name="title_3">Great Variety Of Items</string>

    <string name="permission">PERMISSION</string>
    <string name="storage">STORAGE</string>
    <string name="continue_per">Continue</string>
    <string name="notification">NOTIFICATION</string>
    <string name="no_internet">No Internet</string>
    <string name="granted_notification">Notification permission granted</string>
    <string name="granted_storage">Storage permission granted</string>
    <string name="allow">Allow</string>
    <string name="to_access">to access photos on your device</string>
    <string name="to_access_13">to access notification on your device</string>

    <string name="rate_us">Rate us</string>
    <string name="share_app">Share app</string>
    <string name="privacy_policy"><![CDATA[Privacy & policy]]></string>

    <string name="zero_star_title">Do you like the app?</string>
    <string name="zero_star">Let us know your experience</string>

    <string name="one_star_title">Oh, no!</string>
    <string name="one_star">Please give us some feedback</string>

    <string name="two_star_title">Oh, no!</string>
    <string name="two_star">Please give us some feedback</string>

    <string name="three_star_title">Oh, no!</string>
    <string name="three_star">Please give us some feedback</string>

    <string name="four_star_title">We love you too!</string>
    <string name="four_star">Thanks for your feedback</string>

    <string name="five_star_title">We love you too!</string>
    <string name="five_star">Thanks for your feedback</string>

    <string name="rate_us_0">You have not rated it yet!</string>
    <string name="rate">Rate</string>
    <string name="exit">Exit</string>
    <string name="have_rated">Thank you for rate our app</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="download">Download</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="wait_a_minute">Wait a minute</string>
    <string name="reset">Reset</string>
    <string name="download_success">Download successful to the Pony OC: Pony Avatar Maker album</string>
    <string name="please_check_your_internet">Please check your internet</string>
    <string name="please_select_an_image">Please select an image</string>
    <string name="error">Error</string>
    <string name="an_error_occurred">An error occurred, please try again later.</string>
    <string name="image_has_been_saved_successfully">The project has been saved successfully!</string>
    <string name="save">Save</string>
    <string name="are_you_sure_want_to_delete_this_item">Do you want to delete?</string>
    <string name="downloading">Downloading...</string>
    <string name="successfully">Successfully</string>
    <string name="download_failed_please_try_again_later">Download failed, please try again later!</string>
    <string name="save_failed_please_try_again">Save failed, please try again!</string>
    <string name="delete_failed_please_try_again">Delete failed, please try again!</string>
    <string name="my_creation">My Creation</string>
    <string name="delete_your_customize">Delete your customize</string>
    <string name="are_you_sure_you_want_to_delete_the_image">Are you sure you want to delete the image?</string>
    <string name="haven_t_saved_it_yet_do_you_want_to_exit">Haven’t saved it yet, are you sure to exit?</string>
    <string name="change_your_whole_design_are_you_sure">Do you want to reset?</string>
    <string name="character_maker">Pixel Maker</string>
    <string name="no_item_here">No Item Here</string>
    <string name="quick_maker">Quick Maker</string>
    <string name="my_character">My Pixel</string>
    <string name="category">Pixel Maker</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_item_space">No current history</string>
    <string name="add_to_whatsapp">Add To WhatsApp</string>
    <string name="add_to_telegram">Add To Telegram</string>
    <string name="my_avatar">My Avatar</string>
    <string name="my_design">My Design</string>
    <string name="my_album">My album</string>
    <string name="no_app_found_to_handle_this_action">No app found to handle this action</string>
    <string name="invalid_action_msg">Application not installed</string>
    <string name="invalid_action">Error</string>
    <string name="limit_3_items">At least 3 items are required to create a sticker</string>
    <string name="limit_30_items">Only a maximum of 30 items can be added</string>
    <string name="create_package_name">Create Package Name</string>
    <string name="enter_your_package_name">Enter your package name</string>
    <string name="please_enter_your_package_name">Please enter your package name!</string>
    <string name="background">Background</string>
    <string name="image">IMAGE</string>
    <string name="color">COLOR</string>
    <string name="add_image">Add Image</string>
    <string name="sticker">Sticker</string>
    <string name="speech_bubbles">Speech Bubbles</string>
    <string name="text">Input text</string>
    <string name="type_your_content">Type your content...</string>
    <string name="font">Font</string>
    <string name="choose_color">Choose Color</string>
    <string name="done">Done</string>
    <string name="null_edt">Please enter text</string>
    <string name="input_text">Input text</string>
    <string name="hello_world">Type your content...</string>
    <string name="no_item_desgin">No current history</string>
    <string name="my_character_in">My Work</string>
    <string name="quick_maker_in">Quick mix</string>
    <string name="exit_add">Exit your background</string>
    <string name="exit_bg">Exit your background</string>
    <string name="loading">Loading</string>
    <string name="internet_required_for_more_characters">Internet required for more characters</string>
    <string name="music">Music</string>
    <string name="my_work">My Work</string>
    <string name="pride_maker">Pride OC Maker</string>
    <string name="trending">Trending Custom</string>
    <string name="my_pony">My Pony</string>
    <string name="do_you_want_to_exit">Do you want to exit?</string>
    <string name="pfp_random">Pride PFP Random</string>
    <string name="trending_tv">Pride PFP Trending</string>
    <string name="pride_pfp_overlay">Pride PFP Overlay</string>
    <string name="generate">Generate Random</string>

    <!-- Pride PFP Overlay flow -->
    <string name="pride_choose_image">Choose Image</string>
    <string name="pride_crop_image">Crop Image</string>
    <string name="pride_choose_flags">Choose Your Pride Flags</string>
    <string name="pride_choose_layout">Choose Layout Style</string>
    <string name="pride_choose_design">Choose Design Style</string>
    <string name="pride_result_title">Your Pride Profile Picture Is Ready</string>
    <string name="pride_result_subtitle">Show your Pride with your personalized profile picture</string>
    <string name="pride_choose_image_hint">Choose an image to edit</string>
    <string name="pride_no_image_uploaded">No image uploaded</string>
    <string name="pride_click_to_select_different">Click to select a different image</string>
    <string name="pride_select_up_to_4">Select up to 4 flags to add to your profile picture</string>
    <string name="pride_selected_flags">Selected Flags</string>
    <string name="pride_my_custom">My Custom Flag</string>
    <string name="pride_flags_section">Pride\'s Flag</string>
    <string name="pride_layout_subtitle">Select how the flags should be positioned on your image</string>
    <string name="pride_layout_circle">Circle</string>
    <string name="pride_layout_circle_desc">Apply flag as a circular border around the image</string>
    <string name="pride_layout_square">Square</string>
    <string name="pride_layout_square_desc">Apply flag as a square border around the image</string>
    <string name="pride_layout_background">Background</string>
    <string name="pride_layout_background_desc">Blend transparency in the original image with the flag</string>
    <string name="pride_design_subtitle">Select the visual style for your Pride flags</string>
    <string name="pride_image_zoom">Image Zoom</string>
    <string name="image_scale">Image Scale</string>
    <string name="pride_default_zoom">Default Image Zoom</string>
    <string name="pride_default_ring">Default Image Scale</string>
    <string name="pride_center_image">Center Image Position</string>
    <string name="pride_flag_mode_ring">Flag Mode: Image</string>
    <string name="pride_previous"> Previous</string>
    <string name="pride_start_over">Start Over</string>
    <string name="pride_continue">Continue</string>
    <string name="pride_create_another">Create Another</string>
    <string name="pride_my_work">My Work</string>
    <string name="pride_center">Center</string>
    <string name="pride_create_custom_flag">Create Custom Flag</string>
    <string name="pride_flag_name">Flag Name</string>
    <string name="pride_enter_name">Enter Name</string>
    <string name="pride_colors">Colors</string>
    <string name="pride_create">Create</string>
    <string name="pride_select_at_least_one">Please select at least one flag</string>
    <string name="pride_max_colors_reached">Maximum 10 colors allowed</string>
    <string name="my_pride">My Pride</string>
    <string name="play">PLAY</string>
    <string name="lucki_roll">LUCKY ROLL</string>
    <string name="quick_mix">QUICK MIX</string>
    <string name="creation">CREATION</string>
    <string name="back">BACK</string>
    <string name="hello_world_hint">Hello World !!</string>
</resources>