<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_16_stroke_gradient_solid_black"
    android:gravity="start"
    android:orientation="vertical"
    android:paddingHorizontal="16dp"
    android:paddingVertical="12dp">


    <!-- mnu_download -->
    <LinearLayout
        android:id="@+id/mnu_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_download_purple" />

        <TextView
            android:id="@+id/tvDownload"
            style="@style/single_marquee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/download"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="#4D3F3E3F" />


    <!-- mnu_share -->
    <LinearLayout
        android:id="@+id/mnu_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="14dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical|start">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_share_purple" />

        <TextView
            android:id="@+id/tvShare"
            style="@style/single_marquee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/share"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="140dp"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="#4D3F3E3F" />

    <!-- mnu_delete -->
    <LinearLayout
        android:id="@+id/mnu_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="12dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_delete_purple" />

        <TextView
            android:id="@+id/tvDelete"
            style="@style/single_marquee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>