<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:background="@drawable/bg_16_solid_white">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imvAvtRate"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginTop="28dp"
                android:src="@drawable/ic_rate_zero"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_medium"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/zero_star_title"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imvAvtRate" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:freezesText="true"
                android:gravity="center"
                android:text="@string/zero_star"
                android:textColor="#A9B0BE"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv1" />

            <com.willy.ratingbar.ScaleRatingBar
                android:id="@+id/ll1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv2"
                app:srb_clearRatingEnabled="false"
                app:srb_clickable="true"
                app:srb_drawableEmpty="@drawable/ic_rate_not"
                app:srb_drawableFilled="@drawable/ic_rate"
                app:srb_isIndicator="false"
                app:srb_minimumStars="0"
                app:srb_numStars="0"
                app:srb_rating="0"
                app:srb_scrollable="true"
                app:srb_starHeight="30dp"
                app:srb_starPadding="4dp"
                app:srb_starWidth="30dp"
                app:srb_stepSize="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll1">

                <androidx.cardview.widget.CardView
                    android:id="@+id/btnVote"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:layout_marginTop="20dp"
                    app:cardCornerRadius="8dp"
                    app:cardBackgroundColor="@color/transparent"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_bold"
                        android:gravity="center"
                        android:background="@drawable/bg_btn_rate"
                        android:text="@string/rate"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="14sp" />
                </androidx.cardview.widget.CardView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btnCancel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:gravity="center"
                    android:paddingVertical="15dp"
                    android:text="@string/exit"
                    android:layout_marginTop="-5dp"
                    android:textAllCaps="false"
                    android:textColor="#A9B0BE"
                    android:textSize="14sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</layout>
